# duckdb-polars-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
